torque-oscar (2.1.10-4) hardy; urgency=low

  * Add a dependency to tk8.4 for the gui package.

 -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 05 Aug 2009 16:51:31 -0400

torque-oscar (2.1.10-3) hardy; urgency=low

  * Deactivate dh_shlibdeps in the rules script to avoid misleading dependencies.

 -- Geoffroy Vallee [gvh] <gvh@gvh1.ornl.gov>  Thu, 25 Jun 2009 16:42:50 -0400

torque-oscar (2.1.10-2) hardy; urgency=low

  * Deactivate dh_makeshlibs in the rules script to avoid misleading dependencies.

 -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 25 Jun 2009 16:24:23 -0400

torque-oscar (2.1.10-1) unstable; urgency=low

  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>

 -- hugues local <hugues@unknown>  Fri,  8 Dec 2006 17:16:11 +0100
